--- a/frontend/src/components/Endtime.css
+++ b/frontend/src/components/Endtime.css
@@ -69,7 +69,8 @@ input:-webkit-autofill:focus {
 }
 
 .endtime-btn {
-  width: 150px;
+  min-width: 150px;
+  padding: 10px;
   height: 50px;
   margin-top: 35px;
   background: #ffffff30;
