--- a/frontend/src/pages/Comingsoon.css
+++ b/frontend/src/pages/Comingsoon.css
@@ -127,21 +127,24 @@ input:-webkit-autofill:focus {
   background: #ffffff30;
 }
 
+.comming-social {
+  margin-top: 60px;
+  /* border: 1px solid red; */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .social {
-  width: auto;
+  /* border: 1px solid red; */
+  max-width: 250px;
   font-size: 13px;
   font-family: "Inter-Regular";
   color: #ffffff70;
-  margin-left: 75px;
-  /* text-align: center; */
-  margin-top: 60px;
-  /* border: 1px solid red; */
 }
 
 .social-ul {
   width: 160px;
-  /* text-align: center; */
-  margin-left: 75px;
   margin-top: 25px;
   display: flex;
   justify-content: center;
