--- a/frontend/src/pages/Homepage.css
+++ b/frontend/src/pages/Homepage.css
@@ -2,30 +2,37 @@
    width: 100vw;
    height: 100vh;
    display: flex;
-   /* justify-content: center; */
    flex-direction: column;
    align-items: center;
- 
-   backdrop-filter: blur(10px); /* Blur effekti */
-   -webkit-backdrop-filter: blur(10px); /* Safari uchun */
+   backdrop-filter: blur(10px);
+   -webkit-backdrop-filter: blur(10px);
    color: #fff;
-   overflow: hidden;
-}
-.homePageNav {
-   width: 1394px;
-   height: 35px;
-   /* outline: 1px solid red; */
-   margin-top: 25px;
-   margin-left: 70px;
-   display: flex;
-   align-items: center;
-   justify-content: center;
+   overflow-x: hidden;
 }
 
-.homePageTitle {
-   background: fixed;
+.homePage .language-selector {
+   margin-top: 12px;
+}
+
+/* NAVIGATION BAR */
+.homePageNav {
+   max-width: 90%;
+   width: 100%;
+   height: 35px;
+   margin-top: 25px;
    display: flex;
    align-items: center;
+   justify-content: center; /* Hammasi o‘ng tomonga joylashadi */
+   gap: 180px; /* Elementlar orasidagi masofa */
+   flex-wrap: wrap;
+}
+
+
+/* LOGO */
+.homePageTitle {
+   display: flex;
+   align-items: center;
+   background: fixed;
 }
 
 .homePageTitle img {
@@ -39,10 +46,12 @@
    color: #ffffff;
    margin-left: 10px;
 }
+
+/* MENU LINKS */
 .homePageLink {
    display: flex;
-   margin-left: 220px;
    gap: 25px;
+   flex-wrap: wrap;
 }
 
 .homePageLink li {
@@ -56,16 +65,13 @@
    text-decoration: underline;
 }
 
+/* START BUTTON */
 .homePageStartedBtn {
    width: 120px;
    height: 35px;
    border-radius: 10px;
    background-color: #ffffff20;
    border: 2px solid #EBEBEB50;
-   margin-left: 300px;
-}
-
-.homePageStartedBtn a {
    color: #ffffff;
    font-size: 14px;
    font-family: 'Ubuntu-Medium';
@@ -75,17 +81,43 @@
    background-color: #ffffff50;
 }
 
+/* PAGE CONTENT */
 .pageContentTitle {
+   /* border: 1px solid red; */
    font-size: 48px;
    font-family: 'Inter-Medium';
    text-align: center;
    margin-top: 100px;
+   padding: 0 5%;
 }
 
 .pageContentTitleText {
+   /* border: 1px solid red; */
    color: #ffffff60;
    font-size: 18px;
    font-family: 'Inter-Medium';
    text-align: center;
    margin-top: 15px;
+   padding: 0 5%;
 }
+
+/* DASHBOARD IMAGE */
+.dashboardImg {
+   display: block; /* Markazga joylashishi uchun */
+   width: 800px;
+   max-width: 800px;
+   height: auto;
+   margin: 85px auto 0; /* O‘rtaga joylashish */
+   border: 10px solid #ffffff20;
+   /* border-bottom: 0; */
+   border-radius: 18px;
+}
+
+.dashboardImg img {
+   /* max-width:1500px; */
+   width: 760px;
+   border-radius: 12px;
+   display: block;
+   margin: 10px auto; /* O‘rtaga joylashish */
+}
+
